[이중 리사이클러뷰 공부 ]

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,5 +42,11 @@
         android:layout_height="wrap_content"
         android:text="Room_Mvvm_MainActivity" />
 
+    <Button
+        android:id="@+id/DoubleRecyclerView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="DoubleRecyclerView" />
+
 
 </LinearLayout>
