[다중 리사이클러뷰 공부]

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,5 +48,11 @@
         android:layout_height="wrap_content"
         android:text="DoubleRecyclerView" />
 
+    <Button
+        android:id="@+id/MultiRecyclerView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="MultiRecyclerView" />
+
 
 </LinearLayout>
