[Koin 의존성 주입 공부]

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,5 +54,11 @@
         android:layout_height="wrap_content"
         android:text="MultiRecyclerView" />
 
+    <Button
+        android:id="@+id/Koin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Koin" />
+
 
 </LinearLayout>
